# SWEN

./: .gitignore  .gitmodules  Lecture_Notes.md  README.md  SWEN_syllabus.md  _config.yml  colab_scratchpad.ipynb  devenv.nix  flake.nix  init_project.sh  leaderboard.py  lecture_codings.ipynb  lesson_plans.md  progress.md  python_assignments.md  questions.md  result  rust_assignments.md  shell.nix  submit_project.sh  tutorial.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.ipynb_checkpoints/: colab_scratchpad-checkpoint.ipynb  leaderboard-checkpoint.py
22S_mock_exam_2/: list_comprehension.py  list_comprehension_sol.py  rich_pandas.py  rich_pandas_sol.py
Lecture_Essential Computer Science/: AppendixA.md  AppendixB.md  AppendixD.md  Appendixc.md  chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md
excercises/: assignment_creator.ipynb  assignments.csv  create_assignments.py  encoding.py  encoding_solution.py
md/: 20210110_notes.py  chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  (+7 more)
s01/weird_algorithm/: .gitignore  Cargo.toml  README.md  build.rs  test_template.txt
s01/weird_algorithm/src/: main.rs
s01/weird_algorithm/tests/: cses_tests.rs
s01/weird_algorithm/tests/inout/: 1.out  10.in  10.out  11.out  14.out  2.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
s08/examples/smallrs/: Cargo.toml  exit  exit.s
s08/examples/smallrs/src/: main.rs
(+183 files in other folders)
