[package]
name = "smallrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }


[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
lto = true
